# nfl_batchgineering

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt
.claude/: CLAUDE_CODE_PLAN_PROMPT.md  MASTER_PROMPT_FOR_CLAUDE_CODE.md
.claude/commands/: backtest.md  data.md  predict.md  train.md
.claude/references/: ACADEMIC_RESEARCH.md
dagster_project/: __init__.py  constants.py
dagster_project/assets/: dbt_assets.py  ingestion.py  ml_training.py  predictions.py
dagster_project/jobs/: weekly_pipeline.py
dagster_project/resources/: dbt_resource.py
dagster_project/schedules/: weekly_schedule.py
dbt_project/: dbt_project.yml  profiles_template.yml
dbt_project/analyses/snowflake_admin/: initial_db_schema_table_setup.sql
dbt_project/models/2_intermediate/: _int__models.yml  int_game_vegas_lines.sql  int_plays_cleaned.sql  int_situational_efficiency.sql  int_team_defensive_strength.sql  int_team_offensive_metrics.sql  int_upcoming_games.sql
dbt_project/models/3_marts/: _marts__models.yml  mart_game_prediction_features.sql  mart_model_validation.sql  (+3 more)
notebooks/: xgboost_spread_prediction_output.py
snowflake_sql/: complete_database_setup.sql  setup_instructions.md  snowflake_initial_setup.sql  snowflake_plan.md  validate_setup.sql
src/ingestion/: training_data_loader.py
src/ml/: README.md  WEEKLY_WORKFLOW.md  __init__.py  base.py  predict.py  train_elo_model.py  train_ensemble.py  train_spread_model.py
src/setup/: database_setup.py
src/utils/: discover_nflverse_schema.py  test_env_loader.py
(+20 files in other folders)
